tests/errors/if_decls.weird_mes
main :: () -> void {
    x := 4;
    if w := 2; y := 3 + x*w; t := 0; {
        printint(w);
        println();
    } else {
        printint(y);
        println();
    };
};